Autenticação e registro 1 fase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+## aws
+
+user_pool_id=us-east-2_xjA7HsdBF
+aws_region=us-east-2
+client_id=19m67rttfc2ela20g5dgo9n9q2
+access_key=AKIASM7VWOLB7TMVIF5Z
+secret_key=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
+client_secret=lbp1t2acf4l48n2lcih2d9t85c3linbmf1f6qcl9krecqcgcdca
+server.port=2020
