--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ifce</groupId>
 	<artifactId>dailypoint</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>dailypoint</name>
 	<description>Trabalho final POO</description>
 	<properties>
