--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dailypoint
 spring.datasource.username=postgres
 spring.datasource.password=
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+log4j.logger.org.hibernate=info
 
 ## aws
 
